# pytest-mock-resources

./: .bumpversion.cfg  .coveragerc  .flake8.ini  .gitignore  .isort.cfg  .mypy.ini  .pydocstyle.ini  .python-version  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: build.yml  lint_and_test.yml  release.yml  test.yml
docker-hive/: docker-compose.yml
docker-hive/conf/: default.properties  hive-site.xml
docs/: conf.py  index.rst  readme_link.rst  requirements.txt
docs/source/: api.rst  async.rst  ci.rst  cli.rst  conf.py  config.rst  contributing.rst  database.rst  docker.rst  docker_client.rst  fixtures.rst  index.rst  internals.rst  mongo.rst  moto.rst  postgres.rst  quickstart.rst  redis.rst  redshift.rst  sqlite.rst
docs/source/relational/: basics.rst  index.rst  manual-engines.rst  ordered-actions.rst  template-database.rst
src/pytest_dockerdb/: __init__.py
src/pytest_mock_resources/: __init__.py  action.py  cli.py  compat.py  config.py  credentials.py  fixture.py  fixtures.py  hooks.py  plugin.py  sqlalchemy.py  whales.py
src/pytest_mock_resources/compat/: __init__.py  import_.py  sqlalchemy.py
src/pytest_mock_resources/container/: __init__.py  base.py  config.py  mongo.py  moto.py  mysql.py  postgres.py  presto.py  redis.py  redshift.py
src/pytest_mock_resources/container/async_/: postgres.py
src/pytest_mock_resources/fixture/: __init__.py  base.py  credentials.py  database.py  mongo.py  moto.py  mysql.py  postgresql.py  redis.py  sqlite.py
src/pytest_mock_resources/fixture/database/: __init__.py  database.py  engine_modifications.py  generic.py  mock_s3_copy.py  mock_s3_unload.py  mongo.py  presto.py  redis.py  udf.py
src/pytest_mock_resources/fixture/database/relational/: __init__.py  generic.py  mysql.py  postgresql.py  redshift.py  sqlite.py
src/pytest_mock_resources/fixture/database/relational/async_/: generic.py
src/pytest_mock_resources/fixture/database/relational/presto/: __init__.py  udf.py
src/pytest_mock_resources/fixture/database/relational/redshift/: __init__.py  udf.py
src/pytest_mock_resources/fixture/metastore/: glue.py
src/pytest_mock_resources/fixture/moto/: __init__.py  action.py  base.py
src/pytest_mock_resources/fixture/redshift/: __init__.py  udf.py
src/pytest_mock_resources/patch/: __init__.py
src/pytest_mock_resources/patch/redshift/: __init__.py  create_engine.py  mock_s3_copy.py  mock_s3_unload.py  psycopg2.py  psycopg2_connect.py  sqlalchemy.py
src/pytest_mock_resources/resource/mongo/: __init__.py  fixture.py
src/pytest_mock_resources/resource/mysql/: __init__.py  fixture.py
src/pytest_mock_resources/resource/postgres/: __init__.py  fixture.py  sqlalchemy.py
src/pytest_mock_resources/resource/redis/: __init__.py  fixture.py
src/pytest_mock_resources/resource/redshift/: __init__.py  fixture.py  psycopg2.py  s3_copy.py  s3_unload.py  sqlalchemy.py  udf.py
src/pytest_mock_resources/resource/sqlite/: __init__.py  dialect.py  fixture.py
src/pytest_mock_resources/sqlalchemy/: __init__.py  actions.py  compat.py  engine_manager.py
tests/: __init__.py  conftest.py  test_config.py  test_dockerdb.py  test_example_template_database_cleanup.py  test_examples.py  test_non_session_container.py  test_pytest_mock_resources.py
tests/examples/test_multiprocess_container_cleanup_race_condition/: conftest.py  test_split.py
tests/examples/test_multiprocess_redis_database/: conftest.py  test_split.py
tests/examples/test_postgres_cleanup/: test_cleanup.py
tests/examples/test_postgres_no_cleanup/: test_cleanup.py
tests/examples/test_postgres_template_database_cleanup/: conftest.py  test_cleanup.py
tests/fixture/: __init__.py  test_database.py  test_engine_manager.py  test_mongo.py  test_ordered_actions.py  test_pmr_credentials.py  test_postgres.py  test_redis.py  test_rows.py  test_sqlite.py  test_statements.py
tests/fixture/database/: __init__.py  test_copy.py  test_create_all.py  test_database.py  test_engine_modifications.py  test_metadata.py  test_mongo.py  test_ordered_actions.py  test_patch.py  test_postgres.py  test_presto.py  test_redis.py  test_rows.py  test_sqlite.py  test_statements.py  test_udf.py  test_unload.py
tests/fixture/database/relational/: test_generic.py
tests/fixture/metastore/: test_glue.py
tests/fixture/moto/: test_basic.py  test_create_bucket.py  test_create_s3_files.py
tests/fixture/non_session_container/: test_dynamic_port.py  test_static_port.py
tests/fixture/postgres/: test_cleanup_databases.py  test_cleanup_databases_async.py  test_sqlalchemy2_base_class.py
tests/fixture/redshift/: test_copy.py  test_patch.py  test_udf.py  test_unload.py  utils.py
