[tool.poetry]
name = "pytest-mock-resources"
version = "2.4.0"
description = "A pytest plugin for easily instantiating reproducible mock resources."
authors = [
    "Omar Khan <oakhan3@gmail.com>",
    "Dan Cardin <ddcardin@gmail.com>",
    "Gabriel Michael <gabriel.j.michael@gmail.com>",
    "Prateek Pisat <pisatprateek12@gmail.com>",
]
license = "MIT"
keywords = [ "pytest", "sqlalchemy", "docker", "fixture", "mock" ]
classifiers = [ "Framework :: Pytest" ]
repository = "https://github.com/schireson/pytest-mock-resources"
packages = [
    { include = "pytest_mock_resources", from = "src" },
]
readme = 'README.md'
include = [
    "*.md",
    "py.typed",
]

[tool.poetry.dependencies]
python = ">=3.6, <4"

pytest = {version = ">=1.0"}
responses = "*"
sqlalchemy = {version = ">1.0, !=1.4.0, !=1.4.1, !=1.4.2, !=1.4.3, !=1.4.4, !=1.4.5, !=1.4.6, !=1.4.7, !=1.4.8, !=1.4.9, !=1.4.10, !=1.4.11, !=1.4.12, !=1.4.13, !=1.4.14, !=1.4.15, !=1.4.16, !=1.4.17, !=1.4.18, !=1.4.19, !=1.4.20, !=1.4.21, !=1.4.22, !=1.4.23"}

# extra [postgres]
psycopg2 = {version = "*", optional = true}
psycopg2-binary = {version = "*", optional = true}
asyncpg = {version = "*", optional = true}

# extra [redshift]
moto = {version = "*", optional = true}
boto3 = {version = "*", optional = true}
sqlparse = {version = "*", optional = true}

# extra [mongo]
pymongo = {version = "*", optional = true}

# extra [redis]
redis = {version = "*", optional = true}

# extra [mysql]
pymysql = {version = ">=1.0", optional = true}

filelock = {version = "*", optional = true}
docker = {version = ">= 2.5.1", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "=>19.3b0", allow-prereleases = true}
coverage = "*"
flake8 = "*"
isort = ">=5.0"
mypy = {version = "0.931", python = ">=3.5"}
pydocstyle = {version = "*", python = ">=3.5"}
sqlalchemy-stubs = {version = "*", python = ">=3.5"}
pytest-xdist = "*"
pytest-asyncio = "^0.15.1"
types-six = "^1.16.0"
types-PyMySQL = "^1.0.2"
types-redis = "^3.5.6"
sqlalchemy2-stubs = "^0.0.2-alpha.19"

[tool.poetry.extras]
docker = ['docker', 'filelock']
postgres = ['psycopg2', 'docker', 'filelock']
postgres-binary = ['psycopg2-binary', 'docker', 'filelock']
postgres-async = ['asyncpg', 'docker', 'filelock']
redshift = ['boto3', 'moto', 'sqlparse', 'docker', 'filelock']
mongo = ['pymongo', 'docker', 'filelock']
redis = ['redis', 'docker', 'filelock']
mysql = ['pymysql', 'docker', 'filelock']

[tool.poetry.plugins.pytest11]
pytest_mock_resources = "pytest_mock_resources"

[tool.poetry.scripts]
pmr = "pytest_mock_resources.cli:main"

[tool.isort]
profile = 'black'
known_first_party = 'app,tests'
line_length = 100
float_to_top=true
order_by_type = false
use_parentheses = true

[tool.black]
line_length = 100

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
incremental = true
plugins = 'sqlalchemy.ext.mypy.plugin'
exclude = 'tests/examples'

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS"
addopts = "--doctest-modules -vv --ff --strict-markers"
norecursedirs = ".* build dist *.egg tests/examples"
pytester_example_dir = "tests/examples"
pmr_multiprocess_safe = true
markers = [
    "postgres",
    "redshift",
    "mongo",
    "redis",
    "mysql",
]
filterwarnings = [
  "error",
  "ignore:invalid escape sequence.*",
  "ignore:urllib.parse.splitnport.*:DeprecationWarning",
  "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",
  "ignore::ResourceWarning",
  "ignore::UserWarning",
]

[build-system]
requires = ["poetry_core==1.0.4"]
build-backend = "poetry.core.masonry.api"
